<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="vertical"
            android:background="@drawable/big_header"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:fontFamily="@font/cairosemibold"
                android:text="@string/you_are_in"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toStartOf="@id/calendar"
                    android:layout_toLeftOf="@id/calendar"
                    android:background="@null"
                    android:src="@drawable/ic_notifications_black_24dp" />

                <ImageButton
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:src="@drawable/ic_event_note_black_24dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:drawableStart="@drawable/location_white"
                    android:drawableLeft="@drawable/location_white"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/cairobold"
                    android:text="@string/you_are_in"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="19dp"
                app:cardCornerRadius="5dp"
                android:layout_gravity="center">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/search_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/location_search_icon"
                        android:drawableLeft="@drawable/location_search_icon"
                        android:fontFamily="@font/cairosemibold"
                        android:textSize="11sp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@null"
                        android:layout_weight=".3"
                        />
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"/>
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:background="@null"
                        android:src="@drawable/filter_inside_search"
                        android:layout_gravity="center"/>
                </TableRow>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">


            <TextView
                android:id="@+id/HotSpots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairosemibold"
                android:textSize="15sp"
                android:textColor="@color/grey"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:drawableStart="@drawable/hotspot_icon"
                android:drawableLeft="@drawable/hotspot_icon"
                android:text="@string/HotSpots"
                android:drawablePadding="5dp"/>
            <Button
                android:id="@+id/HotSpots_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:background="@null"
                android:fontFamily="@font/cairosemibold"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/purble"
                android:drawableEnd="@drawable/view_all_icon"
                android:drawableRight="@drawable/view_all_icon"
                android:visibility="gone"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/HotSpots_nodata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_hotspots"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:fontFamily="@font/cairobold"
                    android:textColor="@color/grey"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/HotSpotsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/card_item"/>
            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">


            <TextView
                android:id="@+id/events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairosemibold"
                android:textSize="15sp"
                android:textColor="@color/grey"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:drawableStart="@drawable/events_icon"
                android:drawableLeft="@drawable/events_icon"
                android:text="@string/events"
                android:drawablePadding="5dp"/>
            <Button
                android:id="@+id/events_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:background="@null"
                android:fontFamily="@font/cairosemibold"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/purble"
                android:drawableEnd="@drawable/view_all_icon"
                android:drawableRight="@drawable/view_all_icon"
                android:visibility="gone"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/events_nodata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_events"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:fontFamily="@font/cairobold"
                    android:textColor="@color/grey"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/eventsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/card_item"/>
            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">


            <TextView
                android:id="@+id/attractions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairosemibold"
                android:textSize="15sp"
                android:textColor="@color/grey"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:drawableStart="@drawable/attarctions_icon"
                android:drawableLeft="@drawable/attarctions_icon"
                android:text="@string/attarctions"
                android:drawablePadding="5dp"/>
            <Button
                android:id="@+id/attarctions_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:background="@null"
                android:fontFamily="@font/cairosemibold"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/purble"
                android:drawableEnd="@drawable/view_all_icon"
                android:drawableRight="@drawable/view_all_icon"
                android:visibility="gone"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/attractions_nodata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_attractions"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:fontFamily="@font/cairobold"
                    android:textColor="@color/grey"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/attarctionsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/card_item"/>
            </RelativeLayout>
        </FrameLayout>


    </LinearLayout>
</ScrollView>
